Fix bug with inappropriate wrapping in second segment of site.

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,6 @@ body {
     gap: 75px;
     flex: 1 1 0;
     flex-wrap: wrap;
-    padding: 10px 445px;
 }
 
 .third-segment {
